kube/3-deploy/2-apps/authentik/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    coredns.io/hostname: "auth.jjgadgets.tech"
    "io.cilium/lb-ipam-ips": ${APP_IP_AUTHENTIK}
  labels:
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
  name: authentik-http
  namespace: authentik
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      targetPort: 9000
      protocol: TCP
    - name: https
      port: 443
      targetPort: 9443
      protocol: TCP
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
