kube/3-deploy/2-apps/authentik/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app authentik
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # ingress controller
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "9100"
              protocol: TCP
            - port: "9000"
              protocol: TCP
            - port: "9443"
              protocol: TCP
            - port: "9300"
              protocol: TCP
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # proxy DNS requests
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # allow Duo
    - toFQDNs:
        - matchPattern: api-*.duosecurity.com
      toPorts:
        - ports:
            - port: "443"
    # allow AWS SES
    - toFQDNs:
        - matchPattern: email-smtp.*.amazonaws.com
      toPorts:
        - ports:
            - port: "587"
